# Python-Journey

./: .gitignore  LICENSE  README.md  pyrightconfig.json
play_ground/: installer.py  teaching_threads.py
play_ground/intofiy_teaching/: main.py
snaps/: CHANGELOG.md  README.md  __init__.py  exceptions.py  pyproject.toml  usage_example.py
snaps/cacher/: __init__.py
snaps/cacher/core/: __init__.py  entry.py
snaps/cacher/core/ports/: orchestrator.py
snaps/cacher/metrics/: __init__.py  memory.py
snaps/cacher/orchestrators/: __init__.py
snaps/cacher/policies/: lru.py
snaps/cacher/presentations/: __init__.py  decorator.py
snaps/cacher/storages/: __init__.py
snaps/cacher/utils/: __init__.py  key_gen.py  policy_require_checker.py  protocols.py
snaps/core/: __init__.py  entry.py
snaps/core/ports/: __init__.py  metrics.py  orchestrator.py  policy.py  storage.py
snaps/orchestrators/: composite.py  simple.py
snaps/policies/: __init__.py  lfu.py  lru.py  ttl.py
snaps/presentations/: decorator.py
snaps/snaps/: exceptions.py
snaps/snaps/core/: base.py  entry.py  keys.py
snaps/storages/: memory.py
snaps/tests/: test_decorator.py  test_entry.py  test_key_gen.py  test_orchestrators.py  test_policies.py  test_storage.py
snaps/utils/: __init__.py  key_gen.py
tools/: __init__.py  stub_gen.py  timer.py
vakt/pipeline/: vakt.drawio  vakt.html
vakt_refactoring/PipeLine/: vakt.html
vakt_refactoring/pipeline/: .$vakt.drawio.bkp  vakt.drawio  (+1 more)
validator/: CHANGELOG.md  README.md  __init__.py  descriptor.py  example_usage.py  field.py  meta.py  model.py  protocols.py
(+160 files in other folders)
