[project]
name = "snaps-cacher"
version = "0.1.0"
description = "Lightweight, extensible Python caching library built on hexagonal architecture. Use built-in TTL, LRU, LFU policies or plug in your own — custom policies, storages, and metrics collectors supported out of the box. Zero dependencies."
authors = [
    {name = "Umidjon Khodjaev", email = "iexistedonlyforyou@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["cache", "caching", "ttl", "lru", "lfu", "decorator", "hexagonal", "extensible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Umidjon-Kh/Python-Journey/tree/main/snaps"
Repository = "https://github.com/Umidjon-Kh/Python-Journey"
"Bug Tracker" = "https://github.com/Umidjon-Kh/Python-Journey/issues"
Changelog = "https://github.com/Umidjon-Kh/Python-Journey/blob/main/snaps/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
]

[tool.poetry]
packages = [{include = "cacher"}]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
